--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
 		"@types/node": "^20.19.0",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"eslint": "^9",
-		"eslint-config-next": "15.3.3",
+		"biome": "^0.3.3",
 		"tailwindcss": "^4",
 		"typescript": "^5",
 		"vercel": "^43.1.0",
+		"vitest": "^3.2.3",
 		"wrangler": "^4.20.0"
 	}
 }
