--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./env.d.ts"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.515.0",
 		"next": "15.3.3",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@cloudflare/next-on-pages": "^1.13.12",
@@ -26,6 +31,7 @@
 		"@types/react-dom": "^19",
 		"biome": "^0.3.3",
 		"tailwindcss": "^4",
+		"tw-animate-css": "^1.3.4",
 		"typescript": "^5",
 		"vercel": "^43.1.0",
 		"vitest": "^3.2.3",
